--- a/_posts/2017-7-20-Numpy.md
+++ b/_posts/2017-7-20-Numpy.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: Scientific computing with Python Numpy
+---
+
 In the last few years, I have been working with Python and Matlab initially, but switched to R due to the workload to do large scale data analysis. During 2007-2009, I re-visited Python with Rpy and Ppy2 packages which are an interface to R running embedded in a Python process. The integration is not so smooth.
 
 Nowdays, with the introduction of Numpy, Scipy, Matplotlib and Pandas, Python can almost replace the expensive Matlab software for large scale data analysis. I think it might be helpful to share my notes.
